Add image map in linked notes
Added a way to display / update linked notes with templates.
- when TYPE=<value> is found in notes, using template notes_<value>.txt
for display and notes_upd_<value>.txt for update
- Added option ajax=on for m=NOTES and m=MOD_NOTES in order to get data
from templates

Sample note content:
TITLE=Page title
TYPE=gallery
{"title":"Page title","path":"doc","img":"image.jpg",map:[
{"fn":"ludovic","sn":"ledieu","oc":"0","alt":"Ludovic
LEDIEU","shape":"rect","coords","186,229,294,344"}
]}

Path may have :
doc for %prefix;m=DOC&s=
private for %bvar.gallery_path_private;
public for %bvar.gallery_path;
any other value like http://mon.site/

Using jquery.maphilight to ease highlighting
https://github.com/kemayo/maphilight

Using OpenCV for face detection :
https://docs.opencv.org/3.4/d2/d99/tutorial_js_face_detection.html
(only working with doc path)

Added a way to load xml file (needed for face detection librabry)

Missing file + easier to init

Template notes_upd_gallery.txt was missing

Ease gallery note initialisation from toolbar.

--- a/hd/etc/css/css.css
+++ b/hd/etc/css/css.css
@@ -1404,3 +1404,26 @@ span.notesourcecolor {
     word-wrap: break-word;
     max-width: 40%;
 }
+
+.flex_gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+.item_gallery {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  margin: 5px;
+}
+.item_gallery img {
+  max-height: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
